`[Fix]` Course Section overlap with Nav buttons

--- a/roy5432-page/src/App.css
+++ b/roy5432-page/src/App.css
@@ -404,7 +404,7 @@ body, html {
     align-items: center;
   }
   .course-list {
-    width: 100%;
+    width: 80%;
     margin-bottom: 20px;
   }
 }
@@ -436,7 +436,6 @@ body, html {
   color: #e4e4e4;
 }
 
-/* Main container list for work experience items */
 .work-section > ul {
   list-style: none;
   padding: 0;
@@ -445,7 +444,6 @@ body, html {
   max-width: 800px;
 }
 
-/* Individual work experience item */
 .work-section > ul > li {
   background-color: #1e1e1e;
   margin-bottom: 20px;
@@ -454,7 +452,6 @@ body, html {
   transition: background-color 0.3s ease;
 }
 
-/* Hover effect for work experience item */
 .work-section > ul > li:hover {
   background-color: #2c2e33;
 }
@@ -705,14 +702,14 @@ footer {
   }
   .aboutme-bottom {
     display: flex;
-    flex-direction: column; /* Stack blocks vertically */
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;  /* Adjust spacing between blocks as needed */
-    max-width: 100%; /* Override fit-content if needed */
+    gap: 10px;  
+    max-width: 100%;
   }
   
-  
+
   /* Courses Section adjustments */
   .course-content {
     flex-direction: column;
